--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,14 @@
 }
 
 .Map-image {
-  max-width: 319px;
-  padding: 9%;
+  max-width: 500px;
+  padding: 56px;
   z-index: auto;
   position: absolute;
 }
 
 .Route-planning-container {
-  width: 200px;
+  width: 420px;
   -webkit-box-shadow: 0px 0px 25px 10px rgba(203, 203, 203, 0.69);
   box-shadow: 0px 0px 25px 10px rgba(203, 203, 203, 0.69);
 }
